k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wiseapp
  template:
    metadata:
      labels:
        app: wiseapp
    spec:
      containers:
      - name: wiseapp
        image: akhilyechuri064/wisecow:v2
        ports:
        - containerPort: 8080
